--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Atividade:</h1>
     <a href="Atividade1/index.html">Atividade1 - Curriculo</a>
     <a href="Atividade2 - Formulario/index.html">Atividade2 - Formulario</a>
-    <a href="Projeto15/index.html">Projeto</a>
-    <a href="https://ruanmenezeslima123.github.io/AlunoRuan/Projeto%20Social/Index.html">Projeto Sociaol</a>
+    <a href="">Projeto</a>
+    <a href="https://ruanmenezeslima123.github.io/AlunoRuan/Projeto%20Social/Index.html">Projeto Social</a>
 </body>
 </html>
