--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <h1>Atividade:</h1>
-    <a href="Atividade1/index.html">Atividade1 - Curriculo</a>
-    <a href="Atividade2 - Formulario/index.html">Atividade2 - Formulario</a>
-    <a href="">Projeto</a>
-    <a href="https://ruanmenezeslima123.github.io/AlunoRuan/Projeto%20Social/Index.html">Projeto Social</a>
+    <a href="Atividade1/index.html">Atividade1 - Curriculo</a> <br>
+    <a href="https://ruanmenezeslima123.github.io/AlunoRuan/Atividade2/index.html">Atividade2 - Formulario</a> <br>
+    <a href="https://ruanmenezeslima123.github.io/AlunoRuan/projeto15/index.html">Projeto das bolas</a> <br>
+    <a href="https://ruanmenezeslima123.github.io/AlunoRuan/Projeto%20Social/Index.html">Projeto Social (Trabalho 1)</a> <br>
+    <a href="https://ruanmenezeslima123.github.io/AlunoRuan/projeto-Mesa-Estilo/index.html">Projeto Mesa (Trabalho 2)</a> <br>
+    <a href="https://ruanmenezeslima123.github.io/AlunoRuan/projeto-Mesa/index.html>Projeto Mesa (Trabalho 3)</a>
+
 </body>
 </html>
