Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="https://ruanmenezeslima123.github.io/AlunoRuan/projeto15/index.html">Projeto das bolas</a> <br>
     <a href="https://ruanmenezeslima123.github.io/AlunoRuan/Projeto%20Social/Index.html">Projeto Social (Trabalho 1)</a> <br>
     <a href="https://ruanmenezeslima123.github.io/AlunoRuan/projeto-Mesa-Estilo/index.html">Projeto Mesa (Trabalho 2)</a> <br>
-    <a href="https://ruanmenezeslima123.github.io/AlunoRuan/projeto-Mesa/index.html>Projeto Mesa (Trabalho 3)</a>
+    <a href="https://ruanmenezeslima123.github.io/AlunoRuan/projeto-Mesa/index.html">Projeto Mesa (Trabalho 3)</a>
 
 </body>
 </html>
