--- a/projeto-Mesa/index.html
+++ b/projeto-Mesa/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gerenciamento de Mesas</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <header>
@@ -24,6 +24,6 @@
   <footer>
     <p>© 2025 Restaurante</p>
   </footer>
-  <script src="script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
